labs/nginx-red-http/nginx-red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: red
  labels:
    app: nginx-tcp
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-tcp
  template:
    metadata:
      labels:
        app: nginx-tcp
    spec:
      volumes:
      - name: testfile-dir
        emptyDir: {}
      containers:
      - name: nginx-tcp
        image: nginx:latest
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: testfile-dir
          mountPath: /usr/share/nginx/html/test
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc
  namespace: red
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-tcp
