labs/nginx-red-http/nginx-red-http-gw-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: f5-gateway-class
spec:
  controllerName: "f5.com/default-f5-cne-controller"
  description: "F5 BIG-IP Kubernetes Gateway"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-httproute-gateway
  namespace: red
spec:
  addresses:
  - type: "IPAddress"
    value: 198.19.19.100
  gatewayClassName: f5-gateway-class
  listeners:
  - name: nginx
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app
  namespace: red
spec:
  parentRefs:
  - name: my-httproute-gateway
    sectionName: nginx
  hostnames:
    - "http.example.com"
  rules:
  - backendRefs:
    - name: nginx-app-svc
      namespace: red
      port: 80
